sails/macros/core/tests/snapshots/gprogram__generates_init_for_multiple_ctors.snap
---
source: macros/core/tests/gprogram.rs
assertion_line: 38
expression: result
---
impl MyProgram {
    pub async fn new(p1: u32, p2: String) -> Self {
        Self { p1, p2 }
    }
    pub fn new2(p2: String, p1: u32) -> Self {
        Self { p1, p2 }
    }
}
impl sails::meta::ProgramMeta for MyProgram {
    fn constructors() -> sails::scale_info::MetaType {
        sails::scale_info::MetaType::new::<meta::ConstructorsMeta>()
    }
    fn services() -> impl Iterator<Item = (&'static str, sails::meta::AnyServiceMeta)> {
        [].into_iter()
    }
}
use sails::Decode as __ProgramDecode;
use sails::TypeInfo as __ProgramTypeInfo;
#[derive(__ProgramDecode, __ProgramTypeInfo)]
#[codec(crate = sails::scale_codec)]
#[scale_info(crate = sails::scale_info)]
#[allow(dead_code)]
struct __NewParams {
    p1: u32,
    p2: String,
}
#[derive(__ProgramDecode, __ProgramTypeInfo)]
#[codec(crate = sails::scale_codec)]
#[scale_info(crate = sails::scale_info)]
#[allow(dead_code)]
struct __New2Params {
    p2: String,
    p1: u32,
}
mod meta {
    use super::*;
    #[derive(__ProgramTypeInfo)]
    #[scale_info(crate = sails::scale_info)]
    pub enum ConstructorsMeta {
        New(__NewParams),
        New2(__New2Params),
    }
}
#[cfg(target_arch = "wasm32")]
pub mod wasm {
    use super::*;
    use sails::{gstd, hex, prelude::*};
    static mut PROGRAM: Option<MyProgram> = None;
    #[gstd::async_init]
    async fn init() {
        sails::gstd::events::__enable_events();
        let mut input: &[u8] = &gstd::msg::load_bytes().expect("Failed to read input");
        let (program, invocation_route) = if input
            .starts_with(&[12u8, 78u8, 101u8, 119u8])
        {
            static INVOCATION_ROUTE: [u8; 4usize] = [12u8, 78u8, 101u8, 119u8];
            let request = __NewParams::decode(&mut &input[4usize..])
                .expect("Failed to decode request");
            let program = MyProgram::new(request.p1, request.p2).await;
            (program, INVOCATION_ROUTE.as_ref())
        } else if input.starts_with(&[16u8, 78u8, 101u8, 119u8, 50u8]) {
            static INVOCATION_ROUTE: [u8; 5usize] = [16u8, 78u8, 101u8, 119u8, 50u8];
            let request = __New2Params::decode(&mut &input[5usize..])
                .expect("Failed to decode request");
            let program = MyProgram::new2(request.p2, request.p1);
            (program, INVOCATION_ROUTE.as_ref())
        } else {
            let mut __input = input;
            let input = String::decode(&mut __input)
                .unwrap_or_else(|_| {
                    if input.len() <= 8 {
                        format!("0x{}", sails::hex::encode(input))
                    } else {
                        format!(
                            "0x{}..{}", sails::hex::encode(& input[..4]),
                            sails::hex::encode(& input[input.len() - 4..])
                        )
                    }
                });
            panic!("Unexpected ctor: {}", input)
        };
        unsafe {
            PROGRAM = Some(program);
        }
        gstd::msg::reply_bytes(invocation_route, 0).expect("Failed to send output");
    }
    #[gstd::async_main]
    async fn main() {
        let mut input: &[u8] = &gstd::msg::load_bytes().expect("Failed to read input");
        let output: Vec<u8> = {
            let mut __input = input;
            let input = String::decode(&mut __input)
                .unwrap_or_else(|_| {
                    if input.len() <= 8 {
                        format!("0x{}", sails::hex::encode(input))
                    } else {
                        format!(
                            "0x{}..{}", sails::hex::encode(& input[..4]),
                            sails::hex::encode(& input[input.len() - 4..])
                        )
                    }
                });
            panic!("Unexpected service: {}", input)
        };
        gstd::msg::reply_bytes(output, 0).expect("Failed to send output");
    }
}
